--- a/src/component/Profile/Profile.module.css
+++ b/src/component/Profile/Profile.module.css
@@ -1,7 +1,9 @@
 .profile {
-    background-color: var(--secondary-color);
-  }
-  
+    background-color: #323848;
+    padding: 2rem;
+    border-color: #323848;
+}
+
 .profile_article{
     display: flex;
     flex-direction: row;
@@ -11,7 +13,6 @@
     margin-inline: auto;
     gap: 1rem;
     padding-top: 1rem;
-    margin-bottom: 20px
 }
   
 .profile_detail{
