--- a/src/component/Certificate/Certificate.module.css
+++ b/src/component/Certificate/Certificate.module.css
@@ -4,6 +4,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
 }
 
 .title {
@@ -63,5 +65,9 @@
     }
     .title {
         font-size: 2rem;
+    }
+
+    .card{
+        height: 23rem;
     }
 }
